--- a/register.html
+++ b/register.html
@@ -79,7 +79,7 @@
                             <label></label>
                           </div>
                           <div class="user-box">
-                            <input type="number" name="valor" required>
+                            <input type="value" name="valor" required>
                             <label>Valor</label>
                           </div>
                           <center>
